--- a/1_file_cleaner.ipynb
+++ b/1_file_cleaner.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# File Cleaner\n",
     "\n",
-    "#### Note: Use the picasso kernel only."
+    "#### Note: Use the picasso kernel only"
    ]
   },
   {
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "What is this used for?\n",
-    "- Some imaging channels show sticking of imagers at one sight for 100s of frames. This code will remove the binding events longer than (max_bright_time) allowed. "
+    "- Some imaging channels show sticking of imagers at one sight for 100s of frames. This code will remove the binding events longer that (max_bright_time) allowed. "
    ]
   },
   {
@@ -74,7 +74,7 @@
    "source": [
     "# Define the folder location and the file extension inside the folder\n",
     "\n",
-    "folder = '' # Folder Location. This can also be the whole field of view, to reduce analysis time. \n",
+    "folder = '/Users/abhinav/Library/CloudStorage/OneDrive-IndianInstituteofScience/AnalysisFolder/Epi/Kyoto_Multiplex/Mock/29-05-2025' # <<< Set your folder path here\n",
     "file_extn = '.hdf5'\n",
     "file_names = [f for f in _os.listdir(folder) if f.endswith(file_extn)]"
    ]
@@ -181,8 +181,8 @@
    "source": [
     "# Define the linking parameters\n",
     "\n",
-    "r_max = 1 # Radius/Distance between two consecutive events to link.\n",
-    "max_dark_time = 10 # Maximum number of dark frames between two events to link."
+    "r_max = 1\n",
+    "max_dark_time = 10"
    ]
   },
   {
@@ -193,7 +193,7 @@
    "source": [
     "# Clean up parameters\n",
     "\n",
-    "max_bright_time = 15 # Discard events longer that specified number of frames."
+    "max_bright_time = 15"
    ]
   },
   {
