--- a/3_boundary_polygon_builder.ipynb
+++ b/3_boundary_polygon_builder.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "# Define the folder and the files with the data\n",
     "\n",
-    "folder = '' # Folder name for specific cell.\n",
+    "folder = '/Users/abhinav/Desktop/Analysis_Revision/Mock/20250813/cell1' # <<< Set your folder path here\n",
     "file_extn = '.hdf5'\n",
     "file_names = [f for f in _os.listdir(folder) if f.endswith(file_extn)]"
    ]
