--- a/4_cell_sectioner.ipynb
+++ b/4_cell_sectioner.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "# Define the folder location and the file externsion inside the folder.\n",
     "\n",
-    "folder = '' # Folder name for specific cell.\n",
+    "folder = '/Volumes/DataVol1/03092025_Kyoto_ActD_5H_9plex/Analysis/cell2'    # <<< Set your folder path here\n",
     "folder = _ospath.join(folder, 'Masked')\n",
     "file_extn = '.hdf5'\n",
     "file_names = [f for f in _os.listdir(folder) if f.endswith(file_extn)]"
