--- a/5_feature_extractor.ipynb
+++ b/5_feature_extractor.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "# Define the folder location and the file extension inside the folder.\n",
     "\n",
-    "folder = '' # Folder name for specific cell.\n",
+    "folder = '/Volumes/DataVol1/03092025_Kyoto_ActD_5H_9plex/Analysis/cell2'    # <<< Set your folder path here\n",
     "folder = _ospath.join(folder, 'Sectored')\n",
     "file_extn = '.hdf5'\n",
     "file_names = [f for f in _os.listdir(folder) if f.endswith(file_extn)]\n",
@@ -151,7 +151,7 @@
     "\n",
     "    # Sort data columns in order\n",
     "\n",
-    "    order = ['S2P', 'S5P', 'SC35', 'H3K4me3', 'H3K27ac', 'CTCF', 'H3K27me3', 'H3K9me3', 'Lamin']\n",
+    "    order = ['S2P', 'S5P', 'SC35', 'H3K4me3', 'H3K27ac', 'CTCF', 'H3K27me3', 'H3K9me3', 'LaminB1']\n",
     "    data = data[order]\n",
     "\n",
     "    # print('The max values for each protein in a window are:')\n",
