--- a/7_2_spatial_correlation_plotter_vs_single.ipynb
+++ b/7_2_spatial_correlation_plotter_vs_single.ipynb
@@ -10,14 +10,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What does this do? \n",
-    "- Builds a scatter plot of the data taking the DoC value of each localization into consideration. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -46,57 +38,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the folder with the data and the correlation files.\n",
-    "folder = '' # Folder name for specific cell.\n",
-    "min_radius = 100\n",
-    "step_size = 100\n",
-    "max_radius = 1000\n",
-    "\n",
-    "# Define the data folder and the correlation data folder\n",
-    "data_folder = _ospath.join(folder, 'Masked')\n",
-    "correlation_data_folder = _ospath.join(folder, 'Analysis', 'Correlations', str(min_radius) + '_' + str(step_size) + '_' + str(max_radius))\n",
-    "\n",
-    "#Define the data files and the correlation files.\n",
-    "data_file_extn = '.hdf5'\n",
-    "correlation_file_extn = '.csv'\n",
-    "data_files = [f for f in _os.listdir(data_folder) if f.endswith(data_file_extn)]\n",
-    "correlation_files = [f for f in _os.listdir(correlation_data_folder) if f.endswith(correlation_file_extn)]\n",
-    "pixel_size = 130\n",
-    "\n",
-    "# Define and make the output folder.capitalize\n",
-    "output_folder = _ospath.join(folder, 'Analysis', 'Correlations', 'Plots' + '_' + str(min_radius) + '_' + str(step_size) + '_' + str(max_radius))\n",
-    "if not _ospath.exists(output_folder):\n",
-    "    _os.makedirs(output_folder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "cmap_proteins_white = {\n",
     "    'S2P': LinearSegmentedColormap.from_list('S2P', ['#FFFFFF', '#FF0000']),\n",
     "    'S5P': LinearSegmentedColormap.from_list('S5P', ['#FFFFFF', '#FFAA00']),\n",
     "    'SC35': LinearSegmentedColormap.from_list('SC35', ['#FFFFFF', '#AAFF00']),\n",
-    "    'H3K4me3': LinearSegmentedColormap.from_list('H3K4me3', ['#FFFFFF', '#00FF00']),\n",
-    "    'H3K27ac': LinearSegmentedColormap.from_list('H3K27ac', ['#FFFFFF', '#00FFAA']),\n",
+    "    'H3K27ac': LinearSegmentedColormap.from_list('H3K27ac', ['#FFFFFF', '#00FF00']),\n",
+    "    'H3K4me3': LinearSegmentedColormap.from_list('H3K4me3', ['#FFFFFF', '#00FFAA']),\n",
     "    'CTCF': LinearSegmentedColormap.from_list('CTCF', ['#FFFFFF', '#00AAFF']),\n",
     "    'H3K27me3': LinearSegmentedColormap.from_list('H3K27me3', ['#FFFFFF', '#0000FF']),\n",
     "    'H3K9me3': LinearSegmentedColormap.from_list('H3K9me3', ['#FFFFFF', '#AA00FF']),\n",
-    "    'Lamin': LinearSegmentedColormap.from_list('Lamin', ['#FFFFFF', '#FF00AA']), \n",
+    "    'LaminB1': LinearSegmentedColormap.from_list('LaminB1', ['#FFFFFF', '#FF00AA']), \n",
     "}\n",
     "\n",
     "cmap_proteins_black = {\n",
     "    'S2P': LinearSegmentedColormap.from_list('S2P', ['#000000', '#FF0000']),\n",
     "    'S5P': LinearSegmentedColormap.from_list('S5P', ['#000000', '#FFAA00']),\n",
     "    'SC35': LinearSegmentedColormap.from_list('SC35', ['#000000', '#AAFF00']),\n",
-    "    'H3K4me3': LinearSegmentedColormap.from_list('H3K4me3', ['#000000', '#00FF00']),\n",
-    "    'H3K27ac': LinearSegmentedColormap.from_list('H3K27ac', ['#000000', '#00FFAA']),\n",
+    "    'H3K27ac': LinearSegmentedColormap.from_list('H3K27ac', ['#000000', '#00FF00']),\n",
+    "    'H3K4me3': LinearSegmentedColormap.from_list('H3K4me3', ['#000000', '#00FFAA']),\n",
     "    'CTCF': LinearSegmentedColormap.from_list('CTCF', ['#000000', '#00AAFF']),\n",
     "    'H3K27me3': LinearSegmentedColormap.from_list('H3K27me3', ['#000000', '#0000FF']),\n",
     "    'H3K9me3': LinearSegmentedColormap.from_list('H3K9me3', ['#000000', '#AA00FF']),\n",
-    "    'Lamin': LinearSegmentedColormap.from_list('Lamin', ['#000000', '#FF00AA']), \n",
+    "    'LaminB1': LinearSegmentedColormap.from_list('LaminB1', ['#000000', '#FF00AA']), \n",
     "}"
    ]
   },
@@ -145,18 +108,26 @@
     "def plot_kde_DoC_in_window(folder, data_2, corr_2, center, window, protein_1, protein_2, threshold):\n",
     "    mask_window_2 = (data_2[:, 0] > center[0] - (window[0]/2)) & (data_2[:, 0] < center[0] + (window[0]/2)) & (data_2[:, 1] > center[1] - (window[1]/2)) & (data_2[:, 1] < center[1] + (window[1]/2))\n",
     "    corr_2_window_masked = corr_2[mask_window_2]\n",
+    "    pct = len(corr_2_window_masked[corr_2_window_masked > threshold])/len(corr_2_window_masked)*100\n",
     "    fig, ax = _plt.subplots(figsize = (5, 1.5))\n",
-    "    _sns.kdeplot(corr_2_window_masked, fill=False, ax = ax, color = to_hex(cmap_proteins_white[protein_2](1.0)), linewidth = 2)\n",
+    "    _sns.kdeplot(corr_2_window_masked, fill=False, ax = ax, color = to_hex(cmap_proteins_white[protein_2](1.0)), linewidth = 5)\n",
     "    line = ax.lines[0]\n",
     "    x, y = line.get_data()\n",
     "    mask = x > threshold\n",
     "    ax.fill_between(x[mask], y[mask], color = to_hex(cmap_proteins_white[protein_2](1.0)), alpha = 0.5)\n",
-    "    ax.set_yticks([0.0, 0.5, 1.0])\n",
+    "    ax.tick_params(axis='x', labelsize=17)\n",
+    "    ax.set_xticks([-1.0, -0.5, 0.0, 0.5, 1.0])\n",
+    "    # ax.set_yticks([0.0, 0.5, 1.0])\n",
     "    _plt.ylim(0,1.5)\n",
     "    _plt.xlim(-1.5, 1.5)\n",
+    "    ax.text(0.75, 1.00, f'{pct:.2f}%', ha='center', va='bottom', fontsize = 22, color = to_hex(cmap_proteins_white[protein_2](1.0)))\n",
+    "    ax.get_yaxis().set_visible(False)       # Remove y-axis (ticks + labels)\n",
+    "    ax.spines['left'].set_visible(False)    # Remove left spine\n",
+    "    ax.spines['right'].set_visible(False)   # Remove right spine\n",
+    "    ax.spines['top'].set_visible(False)     # Remove top spine\n",
     "    _plt.savefig(_ospath.join(folder, protein_2 + '_from_' + protein_1 + '_fraction_kde.svg'), format = 'svg', bbox_inches = 'tight')\n",
     "    _plt.show()\n",
-    "    print(f'Percentage of points above threshold = {len(corr_2_window_masked[corr_2_window_masked > threshold])/len(corr_2_window_masked)*100:.2f}%')\n",
+    "    print(f'Percentage of points above threshold = {pct:.2f}%')\n",
     "\n",
     "def plot_spatial_corr_map(data_1, data_2, corr_1, corr_2, protein_1, protein_2, threshold, folder, color, zoom, center, window, reference_alpha):\n",
     "    data_1_size = len(data_1)\n",
@@ -372,35 +343,40 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Regions used in Figure 3. \n",
-    "\n",
-    "Mock:\n",
-    "- For cell 3 'SC35' center = (43750, 82500), window = (5000, 5000)\n",
-    "- For cell 3 'Lamin' center = (60000, 79500), window = (5000, 5000)\n",
-    "\n",
-    "Treated:\n",
-    "- For cell 5 'SC35' center = (89000, 49000), window = (5000, 5000)\n",
-    "- For cell 5 'Lamin' center = (76000, 45500), window = (5000, 5000)\n",
-    "    "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reference = 'SC35'\n",
-    "reference_alpha = 0.1\n",
+    "# Define the folder with the data and the correlation files.\n",
+    "folder = '/Users/abhinav/Library/CloudStorage/OneDrive-IndianInstituteofScience/AnalysisFolder/Epi/20251112/Mock/cell5' # <<< Set your folder path here\n",
+    "min_radius = 100\n",
+    "step_size = 100\n",
+    "max_radius = 1000\n",
+    "\n",
+    "# Define the data folder and the correlation data folder\n",
+    "data_folder = _ospath.join(folder, 'Masked')\n",
+    "correlation_data_folder = _ospath.join(folder, 'Analysis', 'Correlations', str(min_radius) + '_' + str(step_size) + '_' + str(max_radius))\n",
+    "\n",
+    "#Define the data files and the correlation files.\n",
+    "data_file_extn = '.hdf5'\n",
+    "correlation_file_extn = '.csv'\n",
+    "data_files = [f for f in _os.listdir(data_folder) if f.endswith(data_file_extn)]\n",
+    "correlation_files = [f for f in _os.listdir(correlation_data_folder) if f.endswith(correlation_file_extn)]\n",
+    "pixel_size = 130\n",
+    "\n",
+    "# Define and make the output folder.capitalize\n",
+    "output_folder = _ospath.join(folder, 'Analysis', 'Correlations', 'Plots' + '_' + str(min_radius) + '_' + str(step_size) + '_' + str(max_radius))\n",
+    "if not _ospath.exists(output_folder):\n",
+    "    _os.makedirs(output_folder)\n",
+    "\n",
+    "reference = 'LaminB1'\n",
     "background = 'white' # Select 'black or 'white'\n",
-    "zoom = 0\n",
-    "center = (89000, 49000)\n",
+    "zoom = 1\n",
+    "center = (47000, 74000)\n",
     "window = (5000, 5000)\n",
     "threshold = 0.7\n",
-    "reference_alpha = 0.2 # Mock: 'SC35' Full FoV = 0.01; 'SC35' Zoom = 0.05; 'Lamin' Full FoV = ; 'Lamin' Zoom = 0.2 # ActD: 'SC35' Zoom = 0.2\n",
+    "reference_alpha = 0.05 # Mock: 'SC35' Full FoV = 0.01; 'SC35' Zoom = 0.05; 'Lamin' Full FoV = ; 'Lamin' Zoom = 0.2 # ActD: 'SC35' Zoom = 0.2\n",
     "\n",
     "for file_1 in data_files:\n",
     "    if reference in file_1:\n",
@@ -424,7 +400,27 @@
     "# for file in data_files:\n",
     "#     if reference in file:\n",
     "#         view_point = file.split('_')[0]\n",
-    "#         locs, info = load_locs(_ospath.join(data_folder, file))"
+    "#         locs, info = load_locs(_ospath.join(data_folder, file))\n",
+    "\n",
+    "# Save analysis parameters to a text file\n",
+    "parameter_file_name = 'parameters_' + reference + '.txt'\n",
+    "param_file = _ospath.join(output_folder, parameter_file_name)\n",
+    "\n",
+    "with open(param_file, 'w') as f:\n",
+    "    f.write('=== Correlation Plot Parameters ===\\n\\n')\n",
+    "    f.write(f'Folder: {folder}\\n')\n",
+    "    f.write(f'Min radius: {min_radius}\\n')\n",
+    "    f.write(f'Step size: {step_size}\\n')\n",
+    "    f.write(f'Max radius: {max_radius}\\n')\n",
+    "    f.write(f'Pixel size: {pixel_size}\\n\\n')\n",
+    "    f.write(f'Reference protein: {reference}\\n')\n",
+    "    f.write(f'Background color: {background}\\n')\n",
+    "    f.write(f'Zoom: {zoom}\\n')\n",
+    "    f.write(f'Center (x, y): {center}\\n')\n",
+    "    f.write(f'Window (x, y): {window}\\n')\n",
+    "    f.write(f'Threshold: {threshold}\\n')\n",
+    "    f.write(f'Reference alpha: {reference_alpha}\\n\\n')\n",
+    "    f.write('Generated correlation and localization plots will be saved in this folder.\\n')"
    ]
   },
   {
@@ -433,9 +429,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "center = (89000, 49000)\n",
+    "center = (44000, 80000)\n",
     "window = (5000, 5000)\n",
-    "zoom = 0\n",
+    "zoom = 1\n",
     "if zoom:\n",
     "    alpha = 1\n",
     "else:\n",
@@ -444,9 +440,10 @@
     "xlim = (center[0] - (window[0]/2), center[0] + (window[0]/2))\n",
     "ylim = (center[1] - (window[1]/2), center[1] + (window[1]/2))\n",
     "\n",
-    "file_locs = '/Users/abhinav/Library/CloudStorage/OneDrive-IndianInstituteofScience/AnalysisFolder/Epi/Kyoto_Multiplex/ActD/10kFrames/ActD_11-03-25_Kyoto/Cleaned/Final/Cell5/Masked/SC35_Aligned_cleaned_cell5_Masked.hdf5'\n",
+    "file_locs = '/Users/abhinav/Library/CloudStorage/OneDrive-IndianInstituteofScience/AnalysisFolder/Epi/20251112/Mock/cell5/Masked/SC35_masked.hdf5'  # <<< Set your folder path here\n",
     "locs, info = load_locs(file_locs)\n",
     "data = _np.column_stack((locs.x, locs.y))\n",
+    "pixel_size = 130\n",
     "data = data * pixel_size\n",
     "_plt.scatter(data[:, 0], data[:, 1], alpha=alpha, s=0.1, c='black')\n",
     "_plt.axis('equal')\n",
@@ -472,10 +469,11 @@
     "target_1 = 'S2P'\n",
     "target_2 = 'S5P'\n",
     "background = 'white' # Select 'black or 'white'\n",
-    "reference_alpha = 0.1\n",
+    "reference_alpha = 0.01\n",
     "zoom = 0\n",
-    "center = (89000, 49000)\n",
-    "window = (5000, 5000)\n",
+    "if zoom:\n",
+    "    center = (89000, 49000)\n",
+    "    window = (5000, 5000)\n",
     "\n",
     "for file_1 in data_files:\n",
     "    if reference in file_1:\n",
