--- a/6_correlation_plotting.ipynb
+++ b/6_correlation_plotting.ipynb
@@ -10,26 +10,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What is this used for? \n",
-    "- Once the feature extractor is used to extract features, it saves the information as a *.csv file for each cell. \n",
-    "- Pearson Correlation for this data is then calculated and plotted. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Workflow\n",
-    "- Define source parent folder location.\n",
-    "- Search for *.csv files and combine them. \n",
-    "- Calculate Pearson Correlation of dataset.\n",
-    "- Plot the heatmap for all combinations. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -82,6 +62,55 @@
     "    data = data.fillna(0)\n",
     "    return data\n",
     "\n",
+    "def combine_and_correlate(folder, file_name):\n",
+    "    files_list = []\n",
+    "    for root, dirs, files in _os.walk(folder):\n",
+    "        for file in files:\n",
+    "            if file == file_name:\n",
+    "                data_file = _ospath.join(root, file)\n",
+    "                files_list.append(data_file)\n",
+    "\n",
+    "    if len(files_list) == 0:\n",
+    "        raise FileNotFoundError(f'No files with name {file_name} found in {folder}.')\n",
+    "\n",
+    "    # Filter only CSV files\n",
+    "    files_list = [file for file in files_list if file.endswith('.csv')]\n",
+    "    print(f'Found {len(files_list)} CSV files with name {file_name} in {folder}.')\n",
+    "    \n",
+    "    for file in files_list:\n",
+    "        print(file)\n",
+    "\n",
+    "    # Read all datasets\n",
+    "    data_list = [_pd.read_csv(file, index_col=0) for file in files_list]\n",
+    "\n",
+    "    # Clean each dataset\n",
+    "    data_list = [df.dropna(how='all').fillna(0) for df in data_list]\n",
+    "\n",
+    "    # Compute correlation matrices\n",
+    "    corr_mats = [df.corr() for df in data_list]\n",
+    "\n",
+    "    # Compute average correlation matrix\n",
+    "    avg_corr = sum(corr_mats) / len(corr_mats)\n",
+    "\n",
+    "    return data_list, corr_mats, avg_corr\n",
+    "\n",
+    "\n",
+    "def plot_correlation_matrices(corr_mats, avg_corr, labels=None, cmap='coolwarm'):\n",
+    "    n = len(corr_mats)\n",
+    "    # fig, axes = _plt.subplots(1, n + 1, figsize=(4*(n+1), 4))\n",
+    "    \n",
+    "    # # Plot each dataset correlation\n",
+    "    # for i, corr in enumerate(corr_mats):\n",
+    "    #     _sns.heatmap(corr, ax=axes[i], cmap=cmap, vmin=-1, vmax=1, cbar=False)\n",
+    "    #     axes[i].set_title(labels[i] if labels else f'Dataset {i+1}')\n",
+    "    #     _plt.show()\n",
+    "    \n",
+    "    # Plot average correlation\n",
+    "    _sns.heatmap(avg_corr, cmap=cmap, vmin=-1, vmax=1)\n",
+    "\n",
+    "    _plt.tight_layout()\n",
+    "    _plt.show()\n",
+    "\n",
     "# Correlation Plot for Each Data Type\n",
     "def correlationplot(data1, data2):\n",
     "    if data1.shape != data2.shape:\n",
@@ -114,6 +143,19 @@
     "    return correlation_matrix\n",
     "\n",
     "# Plotting the correlation matrix\n",
+    "def plot_correlation_confusion_matrix(correlation_matrix, output_folder, output_file_name):\n",
+    "    # mask = _np.triu(_np.ones_like(correlation_matrix, dtype=bool), k=0)\n",
+    "    # correlation_matrix = correlation_matrix.iloc[1:, :-1]\n",
+    "    _np.fill_diagonal(correlation_matrix.values, 1)\n",
+    "    max_value = _np.max(correlation_matrix[correlation_matrix != 1].abs())\n",
+    "    _np.fill_diagonal(correlation_matrix.values, _np.nan)\n",
+    "    cmap = _sns.color_palette('PuOr_r', as_cmap=True)\n",
+    "    # ax = _sns.heatmap(correlation_matrix, annot=False, linewidths=0.5, square=True, cmap=cmap, vmin = (-1 * max_value), vmax = max_value, mask = correlation_matrix.isna(), center=0, )\n",
+    "    ax = _sns.heatmap(correlation_matrix, annot=False, linewidths=0.5, square=True, cmap=cmap, vmin = -0.1, vmax = 0.1, mask = correlation_matrix.isna(), center=0, )\n",
+    "    # ax.xaxis.tick_top()\n",
+    "    _plt.savefig(_ospath.join(output_folder, output_file_name), format = 'svg', bbox_inches='tight')\n",
+    "    _plt.show()\n",
+    "\n",
     "def plot_correlation_confusion_matrix_two_conditions(correlation_matrix_bottom_left, correlation_matrix_top_right, output_folder_1, output_folder_2, output_file_name):\n",
     "    assert correlation_matrix_bottom_left.shape == correlation_matrix_top_right.shape, \"Matrices must be the same shape\"\n",
     "    assert (correlation_matrix_bottom_left.index == correlation_matrix_bottom_left.columns).all(), \"Bottom left must be a square matrix with matching index/columns\"\n",
@@ -132,7 +174,8 @@
     "    max_value = _np.max(combined_matrix[combined_matrix != 1].abs())\n",
     "    cmap = _sns.color_palette('PuOr_r', as_cmap=True)\n",
     "    \n",
-    "    ax = _sns.heatmap(combined_matrix, annot=False, linewidths=0.5, square=True, cmap=cmap, vmin = (-1 * max_value), vmax = max_value, mask = combined_matrix.isna(), center=0, )\n",
+    "    # ax = _sns.heatmap(combined_matrix, annot=False, linewidths=0.5, square=True, cmap=cmap, vmin = (-1 * max_value), vmax = max_value, mask = combined_matrix.isna(), center=0, )\n",
+    "    ax = _sns.heatmap(combined_matrix, annot=False, linewidths=0.5, square=True, cmap=cmap, vmin = -0.11, vmax = 0.11, mask = combined_matrix.isna(), center=0, )\n",
     "    _plt.savefig(_os.path.join(output_folder_1, output_file_name), format = 'svg', bbox_inches='tight')\n",
     "    _plt.savefig(_os.path.join(output_folder_2, output_file_name), format = 'svg', bbox_inches='tight')\n",
     "    _plt.show()\n",
@@ -155,22 +198,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Two condition plotter\n",
+    "# Average Correlation Matrix\n",
     "\n",
-    "folder_condition_bottom_left = '' # Parent Folder Bottom Left\n",
-    "folder_condition_top_right = '' # Parent Folder Top Right\n",
-    "output_folder_1 = output_folder_path(folder_condition_bottom_left)\n",
-    "output_folder_2 = output_folder_path(folder_condition_top_right)\n",
-    "file_name_1 = 'data_1.csv'\n",
-    "file_name_2 = 'data_1.csv'\n",
-    "data_1 = combine_data(folder_condition_bottom_left, file_name_1)\n",
-    "data_2 = combine_data(folder_condition_bottom_left, file_name_2)\n",
-    "data_3 = combine_data(folder_condition_top_right, file_name_1)\n",
-    "data_4 = combine_data(folder_condition_top_right, file_name_2)\n",
-    "correlation_condition_bottom_left = correlationplot(data_1, data_2)\n",
-    "correlation_condition_top_right = correlationplot(data_3, data_4)\n",
-    "plot_correlation_confusion_matrix_two_conditions(correlation_condition_bottom_left, correlation_condition_top_right, output_folder_1, output_folder_2, output_file_name = 'correlation_matrix_two_conditions.svg')\n",
-    "plot_difference_matrix(correlation_condition_bottom_left, correlation_condition_top_right, output_folder_1, output_folder_2, output_file_name = 'difference_matrix_two_conditions.svg')"
+    "folder = '/Volumes/DataVol4/Micky_tmp/NB_DATA_REVISIONS/Mock/Picked_Cells'  # <<< Set your folder path here\n",
+    "output_folder = output_folder_path(folder)\n",
+    "file_name = 'data_1.csv'\n",
+    "\n",
+    "data_list, corr_mats, avg_corr = combine_and_correlate(folder, file_name)\n",
+    "plot_correlation_confusion_matrix(avg_corr, output_folder, output_file_name = 'correlation_matrix_mock.svg')"
    ]
   }
  ],
