--- a/7_3_spatial_correlation_plotter_all_vs_all.ipynb
+++ b/7_3_spatial_correlation_plotter_all_vs_all.ipynb
@@ -2,21 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c9fa9a15",
+   "id": "37952904",
    "metadata": {},
    "source": [
-    "# Spatial Correlation Plotter _ 2\n",
+    "# Spatial Correlation Plotter\n",
     "\n",
     "#### Note: Use epi-paint kernel. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "632933d6",
-   "metadata": {},
-   "source": [
-    "What does this do?\n",
-    "- Plots a scatter plot for all vs all combination with a colormap for DoC measure. "
    ]
   },
   {
@@ -49,7 +40,7 @@
    "outputs": [],
    "source": [
     "# Define the folder with the data and the correlation files.\n",
-    "folder = '' # Folder name for specific cell.\n",
+    "folder = '/Users/abhinav/Library/CloudStorage/OneDrive-IndianInstituteofScience/AnalysisFolder/Epi/Kyoto_Multiplex/Mock/Analysed/05-03-2025/Cleaned/Final/Cell4'    # <<< Set your folder path here\n",
     "min_radius = 100\n",
     "step_size = 100\n",
     "max_radius = 1000\n",
@@ -190,6 +181,50 @@
     "_plt.show()\n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b46e15ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Plot the colorbar\n",
+    "\n",
+    "# import numpy as np\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# from matplotlib.colors import Normalize\n",
+    "# from matplotlib.cm import ScalarMappable\n",
+    "# from matplotlib import cm\n",
+    "\n",
+    "# # Define full range and masking limits\n",
+    "# vmin, vmax = -1, 1\n",
+    "# mask_min, mask_max = -0.7, 0.7\n",
+    "\n",
+    "# # Create colormap\n",
+    "# cmap = cm.get_cmap('PuOr_r')\n",
+    "\n",
+    "# # Define a normalization object\n",
+    "# norm = Normalize(vmin=vmin, vmax=vmax)\n",
+    "\n",
+    "# # Create a gradient and mask the middle part\n",
+    "# gradient = np.linspace(vmin, vmax, 500).reshape(1, -1)\n",
+    "# mask = (gradient >= mask_min) & (gradient <= mask_max)\n",
+    "# gradient = np.ma.masked_array(gradient, mask)\n",
+    "\n",
+    "# # Plot the masked colorbar\n",
+    "# fig, ax = plt.subplots(figsize=(6, 0.2))\n",
+    "# cbar = ax.imshow(gradient, aspect='auto', cmap=cmap, norm=norm, extent=[vmin, vmax, 0, 1])\n",
+    "# ax.set_yticks([])\n",
+    "# ax.set_xlim(vmin, vmax)\n",
+    "\n",
+    "# # Add ticks and labels\n",
+    "# ticks = np.linspace(vmin, vmax, 5)\n",
+    "# ax.set_xticks([-1.0, -0.7, 0.0, 0.7, 1.0])\n",
+    "# ax.set_title(\"Spearman's Correlation Coefficient\")\n",
+    "# plt.savefig(_ospath.join(output_folder, 'Colorbar.svg'), format = 'svg', bbox_inches = 'tight')\n",
+    "# plt.show()"
    ]
   }
  ],
