Updated for Picasso_v9.x

--- a/1_file_cleaner.ipynb
+++ b/1_file_cleaner.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,6 +61,7 @@
     "import os.path as _ospath\n",
     "import os as _os\n",
     "import h5py as _h5py\n",
+    "import pandas as _pd\n",
     "from picasso import lib as _lib\n",
     "from picasso import io as _io\n",
     "from picasso import postprocess as _postprocess\n"
@@ -74,14 +75,30 @@
    "source": [
     "# Define the folder location and the file extension inside the folder\n",
     "\n",
-    "folder = '/Users/abhinav/Library/CloudStorage/OneDrive-IndianInstituteofScience/AnalysisFolder/Epi/Kyoto_Multiplex/Mock/29-05-2025' # <<< Set your folder path here\n",
+    "folder = '' # <<< Set your folder path here\n",
     "file_extn = '.hdf5'\n",
     "file_names = [f for f in _os.listdir(folder) if f.endswith(file_extn)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the linking parameters\n",
+    "\n",
+    "r_max = 1\n",
+    "max_dark_time = 10\n",
+    "\n",
+    "# Clean up parameters\n",
+    "\n",
+    "max_bright_time = 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,112 +112,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Functions needed for linking\n",
+    "# ---------------------------------------------------------\n",
+    "# Universal helper: convert DataFrame → NumPy structured array\n",
+    "# ---------------------------------------------------------\n",
+    "\n",
+    "def ensure_numpy_structured(locs):\n",
+    "\n",
+    "    if isinstance(locs, _pd.DataFrame):\n",
+    "        return locs.to_records(index=False)\n",
+    "    return locs\n",
+    "\n",
+    "\n",
+    "# ---------------------------------------------------------\n",
+    "# Linking functions\n",
+    "# ---------------------------------------------------------\n",
     "\n",
     "def locs_per_link_group(link_group):\n",
-    "    \"\"\"\n",
-    "    Calculates the number of frames/locs per link group in a link_group\n",
-    "    numpy array.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    link_group : numpy 1d array\n",
-    "        Link group number for each localization (locs).\n",
-    "        \n",
-    "    Returns\n",
-    "    -------\n",
-    "    link_group_n : numpy 1d array\n",
-    "        Number of frames per each link group.\n",
-    "    \"\"\"\n",
-    "    # Count occurrences of each link group\n",
     "    unique, counts = _np.unique(link_group, return_counts=True)\n",
-    "    frames_per_link_group_dic = dict(zip(unique, counts))\n",
-    "    \n",
-    "    # Map counts back to the original link_group array\n",
-    "    link_group_n = _np.vectorize(frames_per_link_group_dic.get)(link_group).astype(_np.int32)\n",
-    "    return link_group_n\n",
+    "    lookup = dict(zip(unique, counts))\n",
+    "    return _np.vectorize(lookup.get)(link_group).astype(_np.int32)\n",
+    "\n",
     "\n",
     "def save_locs_withSuffix(path, locs, info, suffix=''):\n",
+    "\n",
+    "    # ensure DataFrame (required by ensure_sanity)\n",
+    "    if not isinstance(locs, _pd.DataFrame):\n",
+    "        locs = _pd.DataFrame.from_records(locs)\n",
+    "\n",
     "    locs = _lib.ensure_sanity(locs, info)\n",
+    "\n",
+    "    # convert back to structured array for saving\n",
+    "    locs_np = locs.to_records(index=False)\n",
+    "\n",
     "    base, ext_locs = _ospath.splitext(path)\n",
     "    output_locs_path = base + '_' + suffix + ext_locs    \n",
     "    output_info_path = base + '_' + suffix + '.yaml'\n",
+    "\n",
     "    with _h5py.File(output_locs_path, \"w\") as locs_file:\n",
-    "        locs_file.create_dataset(\"locs\", data=locs)\n",
+    "        locs_file.create_dataset(\"locs\", data=locs_np)\n",
+    "\n",
     "    _io.save_info(output_info_path, info, default_flow_style=False)\n",
     "\n",
-    "def link_custom(\n",
-    "    locs,\n",
-    "    r_max,\n",
-    "    max_dark_time,\n",
-    "):\n",
+    "# ---------------------------------------------------------\n",
+    "# Main linking function (fully fixed)\n",
+    "# ---------------------------------------------------------\n",
+    "\n",
+    "def link_custom(locs, r_max, max_dark_time):\n",
+    "    # Always convert DataFrame → structured array\n",
+    "    locs = ensure_numpy_structured(locs)\n",
+    "\n",
     "    if len(locs) == 0:\n",
+    "        # return an empty but valid structured array with appended fields\n",
     "        linked_locs = locs.copy()\n",
-    "        if hasattr(locs, \"frame\"):\n",
+    "\n",
+    "        if \"frame\" in linked_locs.dtype.names:\n",
     "            linked_locs = _lib.append_to_rec(\n",
     "                linked_locs, _np.array([], dtype=_np.int32), \"len\"\n",
     "            )\n",
     "            linked_locs = _lib.append_to_rec(\n",
     "                linked_locs, _np.array([], dtype=_np.int32), \"n\"\n",
     "            )\n",
-    "        if hasattr(locs, \"photons\"):\n",
+    "\n",
+    "        if \"photons\" in linked_locs.dtype.names:\n",
     "            linked_locs = _lib.append_to_rec(\n",
     "                linked_locs, _np.array([], dtype=_np.float32), \"photon_rate\"\n",
     "            )\n",
-    "    else:\n",
-    "        locs.sort(kind=\"mergesort\", order=\"frame\")\n",
-    "        if hasattr(locs, \"group\"):\n",
-    "            group = locs.group\n",
-    "        else:\n",
-    "            group = _np.zeros(len(locs), dtype=_np.int32)\n",
-    "        \n",
-    "        link_group = _postprocess.get_link_groups(locs, r_max, max_dark_time, group)\n",
     "\n",
-    "    link_group_n = locs_per_link_group(link_group)\n",
-    "        \n",
-    "    return link_group_n\n",
+    "        # no link groups\n",
+    "        return _np.zeros(0, dtype=_np.int32)\n",
+    "\n",
+    "    # ---------------------------------------------------------\n",
+    "    # FIXED: sorting by frame (for structured arrays)\n",
+    "    # ---------------------------------------------------------\n",
+    "    locs.sort(order=\"frame\", kind=\"mergesort\")\n",
+    "\n",
+    "    # group field handling\n",
+    "    if \"group\" in locs.dtype.names:\n",
+    "        group = locs[\"group\"]\n",
+    "    else:\n",
+    "        group = _np.zeros(len(locs), dtype=_np.int32)\n",
+    "\n",
+    "    # compute link groups\n",
+    "    frames = locs[\"frame\"]\n",
+    "    x = locs[\"x\"]\n",
+    "    y = locs[\"y\"]\n",
+    "    link_group = _postprocess.get_link_groups(frames, x, y, r_max, max_dark_time, group)\n",
+    "\n",
+    "    # Count how many frames per link group\n",
+    "    return locs_per_link_group(link_group)\n",
+    "\n",
+    "\n",
+    "# ---------------------------------------------------------\n",
+    "# Cleaning wrapper\n",
+    "# ---------------------------------------------------------\n",
     "\n",
     "def locs_cleaner(locs, r_max, max_dark_time, max_bright_time):\n",
+    "    # Ensure consistent structured array\n",
+    "    locs = ensure_numpy_structured(locs)\n",
+    "\n",
     "    link_group_n = link_custom(locs, r_max, max_dark_time)\n",
+    "\n",
     "    if len(locs) != len(link_group_n):\n",
     "        raise ValueError(\"Number of events are not matching.\")\n",
+    "\n",
+    "    # Filter events by max on-time frames\n",
     "    mask = _np.array(link_group_n) <= max_bright_time\n",
-    "    locs_cleaned = locs[mask]\n",
-    "    return locs_cleaned\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define the linking parameters\n",
     "\n",
-    "r_max = 1\n",
-    "max_dark_time = 10"
+    "    return locs[mask]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Clean up parameters\n",
-    "\n",
-    "max_bright_time = 15"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Locs loaded for Tom20 channel.\n",
+      "Percent data removed for Tom20 channel is 10.771074019289188%\n",
+      "Locs loaded for G3BP1 channel.\n",
+      "Percent data removed for G3BP1 channel is 21.196318714415924%\n"
+     ]
+    }
+   ],
    "source": [
     "# Data cleanup\n",
     "\n",
@@ -233,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
